--- a/app/src/main/res/layout/layout_tabbar.xml
+++ b/app/src/main/res/layout/layout_tabbar.xml
@@ -1,6 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="60dp">
+        <TextView
+            android:id="@+id/textViewTab1Carte"
+            style="@style/TextViewTab"
+            android:background="@color/purple_700"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="Carte"/>
+        <TextView
+            style="@style/TextViewTab"
+            android:id="@+id/textViewTabOffres"
+            android:background="@color/purple_500"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="Offres"/>
+        <TextView
+            style="@style/TextViewTab"
+            android:id="@+id/textViewTabMagasins"
+            android:background="@color/purple_500"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="Magasins"/>
+    </LinearLayout>
+</RelativeLayout>
