remove theme bug

--- a/app/src/main/res/layout/layout_tabbar.xml
+++ b/app/src/main/res/layout/layout_tabbar.xml
@@ -8,27 +8,33 @@
         android:layout_height="60dp">
         <TextView
             android:id="@+id/textViewTab1Carte"
-            style="@style/TextViewTab"
             android:background="@color/purple_700"
+            android:textColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:textSize = "16sp"
+            android:gravity = "center"
             android:text="Carte"/>
         <TextView
-            style="@style/TextViewTab"
             android:id="@+id/textViewTabOffres"
             android:background="@color/purple_500"
+            android:textColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:textSize = "16sp"
+            android:gravity = "center"
             android:text="Offres"/>
         <TextView
-            style="@style/TextViewTab"
             android:id="@+id/textViewTabMagasins"
             android:background="@color/purple_500"
+            android:textColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:textSize = "16sp"
+            android:gravity = "center"
             android:text="Magasins"/>
     </LinearLayout>
 </RelativeLayout>
