--- a/app/src/main/res/layout/layout_tabbar.xml
+++ b/app/src/main/res/layout/layout_tabbar.xml
@@ -12,6 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:layout_gravity="center_horizontal"
             android:text="Carte"/>
         <TextView
             android:id="@+id/textViewTabOffres"
@@ -19,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:layout_gravity="center_horizontal"
             android:text="Offres"/>
         <TextView
             android:id="@+id/textViewTabMagasins"
@@ -26,6 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:layout_gravity="center_horizontal"
             android:text="Magasins"/>
     </LinearLayout>
 </RelativeLayout>
