--- a/app/src/main/res/layout/fragment_carte.xml
+++ b/app/src/main/res/layout/fragment_carte.xml
@@ -1,15 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     tools:context=".CarteFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:id="@+id/Nom"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="@string/hello_blank_fragment" />
+    <TextView
+        android:id="@+id/Prenom"
+        android:ems="10"
+        android:hint="Nom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="none" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="139dp"
+        android:layout_height="565dp"
+        android:src="@drawable/barcode" />
+
+    <TextView
+        android:id="@+id/Cardref"
+        android:ems="10"
+        android:hint="Prénom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="none" />
 
 </FrameLayout>
