--- a/app/src/main/res/layout/fragment_carte.xml
+++ b/app/src/main/res/layout/fragment_carte.xml
@@ -2,36 +2,50 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center_vertical"
+    android:orientation="vertical"
     tools:context=".CarteFragment">
+    <LinearLayout
+        android:layout_gravity="center_vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/Nom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_blank_fragment" />
-    <TextView
-        android:id="@+id/Prenom"
-        android:ems="10"
-        android:hint="Nom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="none" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="139dp"
-        android:layout_height="565dp"
-        android:src="@drawable/barcode" />
-
-    <TextView
-        android:id="@+id/Cardref"
-        android:ems="10"
-        android:hint="Prénom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="none" />
+        <LinearLayout
+            android:id="@+id/contentLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/Nom"
+                android:layout_width="207dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:hint="Nom" />
+            <TextView
+                android:id="@+id/Prenom"
+                android:layout_width="207dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:hint="Prenom"
+                android:inputType="none" />
+        </LinearLayout>
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="127dp"
+            android:layout_height="141dp"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/barcode" />
+        <TextView
+            android:id="@+id/Cardref"
+            android:ems="10"
+            android:hint="Cardref"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:inputType="none" />
+    </LinearLayout>
 
 </FrameLayout>
